@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-23T08:16:35Z",
+  "timestamp" : "2023-11-23T16:16:55Z",
   "count_outdated" : 3284,
   "uniques_outdated" : 1370,
-  "count" : 3339,
-  "uniques" : 1411,
+  "count" : 3342,
+  "uniques" : 1413,
   "clones" : [
     {
       "timestamp": "2023-11-09T00:00:00Z",
@@ -88,12 +88,12 @@
     },
     {
       "timestamp": "2023-11-23T00:00:00Z",
-      "count": 23,
-      "count_minmax": [ 23, 23 ],
-      "count_decinc": [ 0, 23 ],
-      "uniques": 17,
-      "uniques_minmax": [ 17, 17 ],
-      "uniques_decinc": [ 0, 17 ]
+      "count": 26,
+      "count_minmax": [ 23, 26 ],
+      "count_decinc": [ 0, 26 ],
+      "uniques": 19,
+      "uniques_minmax": [ 17, 19 ],
+      "uniques_decinc": [ 0, 19 ]
     }
   ]
 }
